# Archaeological-backend

./: .gitignore  README.md  app.py  preprocessing.py  pyproject.toml  render.yaml  requirements.txt
config/: config.py
utils/: geospatial_utils.py  model_utils.py
