[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicost-backend"
version = "1.0.0"
dependencies = [
    "Flask>=3.0.0",
    "Flask-Cors>=4.0.0",
    "gunicorn>=21.2.0",
    "numpy>=2.1.0",
    "Pillow>=11.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]